Create Issues Buttons Solved throgh Admin Register

--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
@@ -75,7 +75,7 @@
                 new { Title = "Doctors", Icon = "fa-user-doctor", Description = "Manage medical staff", Controller = "Doctor", Color = "success" },
                 new { Title = "Staff", Icon = "fa-users", Description = "Manage clinic staff", Controller = "Staff", Color = "warning" },
                 new { Title = "Patients", Icon = "fa-hospital-user", Description = "Manage patient records", Controller = "Patient", Color = "danger" },
-                new { Title = "Appointment", Icon = "fa-appointment-medical", Description = "Manage patients appointments", Controller = "Appointment", Color = "Primary" }
+                new { Title = "Appointment", Icon = "fa-calendar-check", Description = "Manage patients appointments", Controller = "Appointment", Color = "Primary" }
                 })
                 {
                     <div class="col-xxl-3 col-lg-6">
