--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Doctor/Index.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Doctor/Index.cshtml
@@ -9,6 +9,12 @@
         <h1 class="display-4 text-primary fw-bold">
             <i class="fas fa-user-md me-2"></i>Doctors
         </h1>
+        @* <a asp-action="Create" class="btn btn-success btn-lg">
+            <i class="fas fa-plus-circle me-2"></i>Create New
+        </a> *@
+        <a asp-action="Register" asp-controller="Auth" class=" btn btn-success btn-lg">
+            <i class="fas fa-plus-circle me-2"></i>New Doctor
+        </a>
     </div>
 
     <div class="card shadow-lg mb-4">
